# ListenD

./: .dockerignore  .gitignore  README.md  com.listend.monitor.plist  install_service.sh  main.py  pyproject.toml  start.sh  uninstall_service.sh  web_server.py
templates/: index.html
utils/: db_utils.py  music_utils.py  notification.py
