[project]
name = "listend"
version = "1.0.0"
description = "macOS 音乐播放监听与统计工具"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ListenD Team"}
]
keywords = ["music", "analytics", "macos", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
]

dependencies = [
    "flask>=3.0.0",
    "pync>=2.0.3",
    "pyobjc>=12.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/listend"
Repository = "https://github.com/yourusername/listend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
